fix: resolve CSRF token validation error on registration form
- Add CloudFront distribution with managed policies for proper header/cookie forwarding
- Configure production framework to trust proxy headers from CloudFront/ALB
- Enable explicit CSRF protection on registration form with dedicated token ID
- Add registration token to stateless CSRF configuration
- Configure CDK environment variables for trusted proxies
- Add CDK convenience scripts to main package.json

Fixes CSRF token validation errors when submitting registration form through CloudFront.

--- a/cdk/package.json
+++ b/cdk/package.json
@@ -8,9 +8,9 @@
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk",
-    "deploy": "cdk deploy",
-    "diff": "cdk diff",
-    "synth": "cdk synth"
+    "deploy": "cdk deploy --profile anny-prod",
+    "diff": "cdk diff --profile anny-prod",
+    "synth": "cdk synth --profile anny-prod"
   },
   "devDependencies": {
     "@types/jest": "^29.5.5",
