--- a/cdk/package.json
+++ b/cdk/package.json
@@ -8,21 +8,21 @@
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk",
-    "deploy": "cdk deploy --profile anny-prod",
+    "deploy": "npm run build && cdk deploy --all --profile anny-prod",
     "diff": "cdk diff --profile anny-prod",
     "synth": "cdk synth --profile anny-prod"
   },
   "devDependencies": {
     "@types/jest": "^29.5.5",
     "@types/node": "20.6.0",
+    "aws-cdk": "2.95.1",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
-    "aws-cdk": "2.95.1",
     "ts-node": "^10.9.1",
     "typescript": "~5.2.2"
   },
   "dependencies": {
     "aws-cdk-lib": "2.95.1",
-    "constructs": "^10.0.0"
+    "constructs": "^10.4.2"
   }
 }
